<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/empId_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_reg"
            android:layout_marginTop="20dp"
            android:hint="@string/emp_id"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/empId_reg"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/pass1_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_reg"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/pass2_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass1_reg"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn1_reg"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/pass2_reg"
            android:layout_marginBottom="164dp"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:background="@color/colorPrimary"
            android:onClick="submitDetails"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn2_reg"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn1_reg"
            android:layout_alignBottom="@+id/btn1_reg"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:background="@color/colorPrimary"
            android:onClick="CancelRegister"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

        <!--        <TextView
                    android:id="@+id/registerDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn2_reg" />-->

    </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>