<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:foregroundGravity="center"
                android:src="@drawable/cwf_logo"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img2"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <Button
                android:id="@+id/signinBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/pass"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:onClick="OpenLogin"/>
            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signinBtn"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:autoLink="web"
                android:linksClickable="true"
                android:gravity="center"
                android:onClick="ForgotPass"
                />

            <TextView
                android:id="@+id/registerTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signinBtn"
                android:text="@string/not_registered"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="55dp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/register"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/signinBtn"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:onClick="OpenRegister"/>

        </RelativeLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>