<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordPage">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/pass1_forgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_reg"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/pass2_forgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass1_forgotPass"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="20sp" />



        <Button
            android:id="@+id/btn1_submit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass2_forgotPass"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:onClick="GotoLogin"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>